--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@ color:white;}
 .beige{
   font-family: "Helvetica", Minion Pro;
   font-weight: lighter;
-  background-color: #DDCDAF;
+  background-color: #A0F9F0;
 }
 
 #leaf{
@@ -102,7 +102,7 @@ table {
 }
 
 body {
-  font-family: "Helvetica", Minion Pro;
+  font-family: 'Quicksand', sans-serif;
   font-weight: lighter;
   margin-left: auto;
   margin-right: auto;
@@ -121,6 +121,7 @@ a.menu:hover{
 }
 
 .hello {
+  font-family: 'Quicksand', sans-serif;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -135,7 +136,7 @@ a.menu:hover{
 .gallery {
   width: 100%;
   height: 400px;
-  padding-top: 100px;
+  padding-top: 200px;
   padding-bottom: auto;
   margin-left: auto;
   margin-right: auto;
@@ -163,7 +164,8 @@ a.menu:hover{
 }
 
 .bigger {
-  font-size:40px;
+  font-family: 'Amatic SC', Helvetica;
+  font-size:60px;
   font-weight: bold;
 }
 
