--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@ color:white;}
 .beige{
   font-family: "Helvetica", Minion Pro;
   font-weight: lighter;
-  background-color: #A0F9F0;
+  background-color: #BCD3B2;
 }
 
 #leaf{
