--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,15 +21,18 @@ color:white;}
 }
 
 .about{
-  width:800px;
+  display: inline-block;
+  width:100%;
   height:300px;
 }
 
 .box{
-  padding: 4%;
-  height:30%;
-  width:399px;
-  display: inline-block;
+  padding-right: 4%;
+  padding-left: 4%;
+  padding-bottom: 0;
+  height:300px;
+  width:425px;
+  display:inline-block;
 }
 
 .coverpic{
