--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,80 @@
 a {text-decoration: none;
 color:white;}
 
+
+#primary_nav_wrap{
+	margin-top:15px
+}
+
+#primary_nav_wrap ul{
+	list-style:none;
+	position:relative;
+	float:left;
+	margin:0;
+	padding:0
+}
+
+#primary_nav_wrap ul a{
+	display:block;
+	color:white;
+	text-decoration:none;
+	font-weight:700;
+	font-size:20px;
+	line-height:32px;
+	padding:0 15px;
+	font-family:: 'Quicksand', sans-serif;
+}
+
+#primary_nav_wrap ul li{
+	position:relative;
+	float:left;
+	margin:0;
+	padding:0
+}
+
+#primary_nav_wrap ul li.current-menu-item{
+	background:#ddd
+}
+
+#primary_nav_wrap ul li:hover{
+	background:red;
+}
+
+#primary_nav_wrap ul ul{
+	display:none;
+	position:absolute;
+	top:100%;
+	left:0;
+	background:#fff;
+	padding:0
+}
+
+#primary_nav_wrap ul ul li{
+	position:relative;
+	z-index: 99;
+  color: black;
+	float:none;
+	width:200px
+}
+
+#primary_nav_wrap ul ul a{
+  color: black;
+	line-height:120%;
+	padding:10px 15px
+}
+
+#primary_nav_wrap ul ul a:hover{
+  color:white;
+	line-height:120%;
+	padding:10px 15px
+}
+
+#primary_nav_wrap ul li:hover > ul{
+	display:block
+}
+
+
+
 .collage{
   width:450px;
   height:600px;
@@ -167,7 +241,7 @@ a.menu:hover{
 
 .header {
   background-color: rgba(0, 0, 0, 0.8);;
-  height: 50px;
+  height: 80px;
   position: fixed; top: 0; right: 0; left: 0;
   width: 100%;
   margin: auto;
@@ -177,7 +251,7 @@ a.menu:hover{
 
 .bothbuttons {
   padding-right: 200px;
-  padding-top: 15px;
+  padding-top: 10px;
   float: right;
 }
 
