--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,6 +137,8 @@ color:white;}
 .wrapper {
   width: 80%;
   margin-top: 100px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
@@ -222,20 +224,13 @@ div h3{
 
 
 .impressum{
-	margin-bottom: 20px;
-	margin-left: 50px;
-	margin-top: 50px;
+	margin-bottom: 10px;
+	margin-left: 10%;
+	margin-top: 100px;
 	float: left;
   font-size: 12;
 }
 
-.grey{
-	width: 100%;
-	height: 100px;
-	color: black;
-	margin:bottom:0;
-	position: fixed;
-}
 
 body {
   font-family: 'Quicksand', sans-serif;
@@ -379,17 +374,46 @@ width: 100%;
 	}
 
 	.box-zwei{
-	  padding-right: 4%;
-	  padding-left: 4%;
-	  padding-bottom: 0;
 	  height:300px;
-	  width:300px;
-	  display:inline-block;
-		align: center;
+	  width:425px;
+	  display:block;
+		text-align: center;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.box{
+		margin: 50px;
+		text-align: center;
+		height:300px;
+		width:425px;
+		display:block;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 
+
 @media screen and (max-width: 768px){
+
+	.box-zwei{
+	  height:300px;
+	  width:300px;
+	  display:block;
+		text-align: center;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.box{
+		margin: 50px;
+		text-align: center;
+	  height:280px;
+	  width:400px;
+	  display:block;
+		margin-left: auto;
+		margin-right: auto;
+	}
 
 	.contact{
 		display: none;
